--- a/src/sass/_styles.scss
+++ b/src/sass/_styles.scss
@@ -10,8 +10,29 @@
 
 body {
   margin: 0;
+  padding: 30px;
+  text-align: center;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
     Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   transition: color 150ms var(--timing-function),
     background-color 150ms var(--timing-function);
+}
+
+button {
+  display: inline-flex;
+  margin-left: 4px;
+  margin-right: 4px;
+  text-transform: uppercase;
+  border: 0;
+  background-color: #3f51b5;
+  color: #ffffff;
+  padding: 10px 20px;
+  cursor: pointer;
+  font-size: 24px;
+  border-radius: 3px;
+  cursor: pointer;
+}
+
+button.active {
+  opacity: 0.5;
 }
